--- a/1stclass/package.json
+++ b/1stclass/package.json
@@ -2,18 +2,20 @@
   "name": "webserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch server server/index.js",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MarachuChandraSekhar/mywebserverassignments.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MarachuChandraSekhar/mywebserverassignments/issues"
+  "dependencies": {
+    "express": "^4.17.3"
   },
-  "homepage": "https://github.com/MarachuChandraSekhar/mywebserverassignments#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
