--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "url": "git+https://github.com/MarachuChandraSekhar/mywebserverassignments.git"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "dotenv": "^16.0.0",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
